# structural_bioinformatics

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml  structbioinfo.code-profile
ex00/: crash_course.ipynb  scientific_python_crash_course.ipynb
ex01/: ex01.ipynb
ex02/: ex02.ipynb  msa.ipynb
ex03/: ex03.ipynb
ex04/: ex04.ipynb
scripts/: find_small_proteins_with_ligands.py  simple_table.md  suitable_protein_ligand_complexes.csv
