[tool.poetry]
name = "structural-bioinformatics"
version = "0.1.0"
description = "Teaching materials for the course: Structural Bioinformatics"
authors = ["Yerko Escalona <35448591+yerkoescalona@users.noreply.github.com>"]
readme = "README.md"
license = "CC BY-NC-SA 4.0"

[tool.poetry.dependencies]
python = "~3.10"
biopandas = "0.4.1"
ipykernel = "6.29.5"
jupyter = "1.1.1"
matplotlib = "3.9.2"
MDAnalysis = "2.7.0"
mdtraj = "1.10.0"
nglview = "3.1.2"
numpy = "1.26.4"
OpenMM = "8.1.1"
pandas = "2.2.3"
py3dmol = "2.4.0"
pypdb = "2.4"
rdkit = "2024.3.5"
scipy = "1.14.1"
tqdm = "4.66.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Set target Python version to 3.10
target-version = "py310"



[tool.ruff.lint]
# Enable Pyflakes (`F`), a subset of pycodestyle (`E`), and docstring checks (`D`).
select = [
    "E4", # Import related errors
    "E7", # Indentation errors
    "E9", # Hanging indentation 
    "F",  # Pyflakes
    "D"   # Docstring checks
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"**/*.ipynb" = [
    "F811", # redefinition of unused variable
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

